Bio-Schema-Chado (0.04000)

  * added new modules and relationships for the newly released
    cell_line module in Chado

 -- Robert Buels <rmb32@cornell.edu>  Mon, 31 Aug 2009 08:43:19 -0700

Bio-Schema-Chado (0.03100)

  * added $VERSION to Bio::Chado::Schema to support CPAN indexer,
    bumped version by several numbers to force CPAN reindexing

 -- Robert Buels <rmb32@cornell.edu>  Mon, 31 Aug 2009 08:43:19 -0700

Bio-Schema-Chado (0.022)

  * update to schema dumping script now finds many more inter-module
    relationships

  * added the new inter-module relationships found by the dumping
    script

 -- Robert Buels <rmb32@cornell.edu>  Sat, 29 Aug 2009 09:28:27 -0700

dbic-chado (0.01_03)

  * changed namespace to Bio::Chado instead of Chado

 -- Robert Buels <rmb32@cornell.edu>  Sun, 16 Aug 2009 16:26:39 -0700

dbic-chado (0.01_01)

  * Initial release.

 -- Robert Buels <rmb32@cornell.edu>  Sat, 15 Aug 2009 16:04:24 -0700