@@ -11,11 +11,17 @@ my $build = Module::Build->new
      create_license => 1,
      meta_merge => {
                     resources => {
-                                  repository => 'http://github.com/rbuels/dbic_chado',
+                                  repository => 'http://github.com/rbuels/Bio-Chado-Schema',
                                  },
                    },
      requires => {
                   'perl'          => '5.8.0',
+
+                  # right now, we have to depend on whole bioperl, like this
+                  'Bio::Root::Version'   => '1.005002',
+                  # keep SPECIFIC bioperl dependencies here, for when bioperl
+                  # is in smaller, versioned chunks
+                  # 'Bio::PrimarySeq' => '1.5.2',
                   'Carp'          => '1.08',
                   'Carp::Clan'    => '6.00',
                   'DBIx::Class'   => '0.08111',
