@@ -203,13 +203,13 @@ lib/Bio/Chado/Schema/Stock/StockPub.pm
 lib/Bio/Chado/Schema/Stock/StockRelationship.pm
 lib/Bio/Chado/Schema/Stock/StockRelationshipPub.pm
 lib/Bio/Chado/Schema/Util.pm
+LICENSE
 maint/bin/update_dbic_dump.pl
+Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
+META.yml
+README
 t/001_basics.t
 t/010_organism.t
 t/lib/DbicChadoTest.pm
-Makefile.PL
-README
-LICENSE
-META.yml
