@@ -1,14 +1,15 @@
 ---
 name: Bio-Chado-Schema
-version: 0.04000
+version: 0.04100
 author:
   - 'Robert Buels, <rmb32@cornell.edu>'
 abstract: standard DBIx::Class layer for the Chado schema
 license: perl
 resources:
   license: http://dev.perl.org/licenses/
-  repository: http://github.com/rbuels/dbic_chado
+  repository: http://github.com/rbuels/Bio-Chado-Schema
 requires:
+  Bio::Root::Version: 1.005002
   Carp: 1.08
   Carp::Clan: 6.00
   DBIx::Class: 0.08111
@@ -19,7 +20,7 @@ configure_requires:
 provides:
   Bio::Chado::Schema:
     file: lib/Bio/Chado/Schema.pm
-    version: 0.04000
+    version: 0.04100
   Bio::Chado::Schema::CellLine::CellLine:
     file: lib/Bio/Chado/Schema/CellLine/CellLine.pm
   Bio::Chado::Schema::CellLine::CellLineCvterm:
